<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.amazoniasistemas.agenda.views.MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_principal" />

     <EditText
         android:id="@+id/main_field_msg"
         android:hint="@string/deixe_sua_mensagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

    <Button

        android:id="@+id/main_button_principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_contatos"/>
</LinearLayout>
