<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.amazoniasistemas.agenda.views.ContatoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contatos" />

    <TextView
        android:id="@+id/contato_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/contato_field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_aluno" />

    <EditText
        android:id="@+id/contato_field_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endereco_do_aluno" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/contato_field_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cidade"/>


</LinearLayout>
